fix bugs and  image on tablet version

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -7,7 +7,11 @@
   background-size: cover;
 
   @include onTablet() {
-    background-position: 25% 25%;
+    background-position: top;
+  }
+
+  @include onDesktop {
+    background-image: url(../images/Cover_phot.png);
   }
 
   &__content {
