--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -5,7 +5,7 @@
     box-sizing: border-box;
     height: 100vh;
     padding: 29px 0;
-    overflow: hidden;
+    overflow-y: auto;
   }
 
   &__top {
